<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/addStopLayout">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addStopName"
            android:hint="@string/stop_name"
            android:textSize="14dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/addStopStartDate"
                android:hint="@string/arrival_date"
                android:textSize="14dp"
                android:layout_weight="1"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/addStopEndDate"
                android:hint="@string/departure_date"
                android:textSize="14dp"
                android:layout_weight="1"/>
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addStopDesc"
            android:hint="@string/stop_description"
            android:textSize="14dp"
            android:lines="5"
            android:gravity="top"/>

    </LinearLayout>

</ScrollView>