<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    app:behavior_hideable="true"
    app:behavior_peekHeight="80dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey"
        android:elevation="500sp">

        <TextView
            android:id="@+id/bottom_stop_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="10dp"
            android:textColor="@color/primaryTextColor"
            android:textSize="20sp"
            android:textAllCaps="true"
            app:layout_constraintEnd_toStartOf="@+id/stopEditButton" />

        <EditText
            android:id="@+id/bottom_stop_name_edit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="20sp"
            android:typeface="normal"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/stopEditButton" />

        <Button
            android:id="@+id/stopEditButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="13dp"
            android:background="@drawable/ic_mode_edit_black_24dp"
            app:layout_constraintEnd_toStartOf="@+id/stopDelButton"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/stopDelButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="13dp"
            android:background="@drawable/ic_delete_black_24dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/stopSaveButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="13dp"
            android:background="@drawable/ic_done_black_24dp"
            android:padding="10dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/stopDetailsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/arrivalDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:padding="5dp"
            android:text="@string/arrival_date_label"
            android:textAlignment="viewStart"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            android:typeface="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bottom_arrival_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:padding="5dp"
            android:textAlignment="viewStart"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            android:typeface="normal"
            app:layout_constraintStart_toEndOf="@+id/arrivalDateLabel"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/bottom_arrival_date_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/dd_mm_yyyy"
            android:padding="5dp"
            android:textAlignment="viewStart"
            android:textColor="@color/primaryTextColor"
            android:inputType="date"
            android:typeface="normal"
            android:visibility="gone"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/arrivalDateLabel"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/deptDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:padding="5dp"
            android:text="@string/departure_date_label"
            android:textAlignment="viewStart"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            android:typeface="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/arrivalDateLabel" />

        <TextView
            android:id="@+id/bottom_dept_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:padding="5dp"
            android:textAlignment="viewStart"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/deptDateLabel"
            app:layout_constraintTop_toBottomOf="@+id/bottom_arrival_date" />

        <EditText
            android:id="@+id/bottom_dept_date_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/dd_mm_yyyy"
            android:padding="5dp"
            android:textAlignment="viewStart"
            android:textColor="@color/primaryTextColor"
            android:inputType="date"
            android:visibility="gone"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/deptDateLabel"
            app:layout_constraintTop_toBottomOf="@+id/bottom_arrival_date_edit" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/bottom_stop_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:lines="15"
            android:padding="5dp"
            android:textSize="18sp"
            android:textAlignment="viewStart"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/bottom_stop_desc_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="15"
            android:padding="5dp"
            android:textAlignment="viewStart"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/changeLocationButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/change_location"
            android:textColor="@color/primaryDarkColor"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bottom_stop_desc_edit" />
    </android.support.constraint.ConstraintLayout>

</LinearLayout>